--- a/src/app/block/block.component.css
+++ b/src/app/block/block.component.css
@@ -1,8 +1,8 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
+} */
 
 div {
     height: 45px;
@@ -20,5 +20,14 @@ div {
     justify-content: center;
     position: absolute;
 
+  }
+
+  h1 {
+    color: rgb(42, 42, 139);
+  }
+
+  p {
+    color: grey;
+    text-align: center;
   }
 
