--- a/src/app/selectplan/selectplan.component.html
+++ b/src/app/selectplan/selectplan.component.html
@@ -1,8 +1,21 @@
 <div class="container">
     <h1>Select your Plan</h1>
-    <h2>You have the option of monthly or yearly billing.</h2>
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-    <div class="four"></div>
+    <h3>You have the option of monthly or yearly billing.</h3>
+   
+  <div class="bloc">
+    <img src="assets/assets/images/icon-arcade.svg" alt="">
+    <p class="mot">Arcade</p>
+</div>
+  <div class="bloc">
+    <img src="assets/assets/images/icon-advanced.svg" alt="">
+    <p class="mot">Advanced</p>
+  </div>
+  <div class="bloc">
+    <img src="assets/assets/images/icon-pro.svg" alt="">
+    <p class="mot">Pro</p>
+  </div>
+  <div class="bloc">
+    <img src="" alt="">
+  </div>
+
 </div>
