--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,7 @@
 .block_one {
-    height: 25vh;
-    
+    height: 25vh; 
+    align-content: center;
 }
-
-
 
 .img_header {
     width: 100%;
@@ -15,12 +13,21 @@
     position: relative;
     display: flex;
     justify-content: center;
-   
+    list-style: none;
     
 }
 
 .pages {
+    width: 80px;
+    margin-top: 40px;
     
-    width: 50px;
-    
+}
+
+a {
+    border-radius: 100%;
+    border: 1px solid;
+    color: aliceblue;
+    cursor: pointer;
+    width: 40px;
+
 }
